<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_groups"
        android:checkableBehavior="single">
        <item
            android:id="@+id/group_all"
            android:checked="true"
            android:orderInCategory="0"
            android:title="@string/menu_show_all" />
        <item
            android:id="@+id/group_local"
            android:orderInCategory="1"
            android:title="@string/menu_show_local" />
        <item
            android:id="@+id/group_from_calendar"
            android:visible="false"
            android:orderInCategory="2"
            android:title="@string/menu_show_from_calendar" />
    </group>

    <group
        android:id="@+id/menu_group_options">
        <item
            android:id="@+id/import_from_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:orderInCategory="101"
            android:title="@string/menu_import_calendar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:orderInCategory="102"
            android:title="@string/menu_settings" />
    </group>
</menu>
