<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.arcadia.wearapp.WearDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_edittext_drawable"
                android:enabled="false"
                android:hint="@string/name_hint"
                android:textColor="@color/custom_text_color"
                android:textSize="@dimen/abc_text_size_large_material" />

            <ImageButton
                android:id="@+id/clear_name_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:paddingEnd="@dimen/abc_button_padding_horizontal_material"
                android:paddingStart="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/start_date_layout"
            android:paddingTop="@dimen/abc_item_padding_material"
            android:text="@string/start_date_label_text"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textSize="@dimen/text_size_secondary_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_spinner_drawable"
                android:enabled="false"
                android:hint="@string/select_date_hint"
                android:textColor="@color/custom_text_color" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_spinner_drawable"
                android:enabled="false"
                android:hint="@string/select_time_hint"
                android:textColor="@color/custom_text_color" />

            <ImageButton
                android:id="@+id/clear_start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/end_date_layout"
            android:paddingTop="@dimen/abc_item_padding_material"
            android:text="@string/end_date_label_text"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textSize="@dimen/text_size_secondary_material" />

        <LinearLayout
            android:id="@+id/end_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_spinner_drawable"
                android:enabled="false"
                android:hint="@string/select_date_hint"
                android:textColor="@color/custom_text_color" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_spinner_drawable"
                android:enabled="false"
                android:hint="@string/select_time_hint"
                android:textColor="@color/custom_text_color" />

            <ImageButton
                android:id="@+id/clear_end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_drawable"
            android:cursorVisible="false"
            android:enabled="false"
            android:hint="@string/description_hint_text"
            android:textColor="@color/custom_text_color"
            android:textSize="@dimen/text_size_primary_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/repeat_spinner"
                android:paddingTop="@dimen/abc_item_padding_material"
                android:text="@string/repeat_rule_text"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="@dimen/text_size_secondary_material" />

            <Spinner
                style="@android:style/Widget.Holo.Light.Spinner"
                android:id="@+id/repeat_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_until_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/repeat_until_spinner"
                    android:paddingTop="@dimen/abc_item_padding_material"
                    android:text="@string/until_label_text"
                    android:textColor="@color/abc_secondary_text_material_light"
                    android:textSize="@dimen/text_size_secondary_material" />

                <Spinner
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:id="@+id/repeat_until_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repeat_until_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/repeat_until_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_spinner_drawable"
                    android:enabled="false"
                    android:hint="@string/select_date_hint"
                    android:textColor="@color/custom_text_color" />

                <TextView
                    android:id="@+id/repeat_until_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_spinner_drawable"
                    android:enabled="false"
                    android:hint="@string/select_time_hint"
                    android:textColor="@color/custom_text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reminders_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/spinner_layout"
                android:paddingTop="@dimen/abc_item_padding_material"
                android:text="@string/reminders_label_text"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="@dimen/text_size_secondary_material" />

            <ImageButton
                android:id="@+id/add_remind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_add"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminders_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>